--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,17 +10,21 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
     - name: Check out
-      uses: actions/checkout@v1
+      uses: actions/checkout@v2
+      with:
+        path: argocd-playground
 
     - uses: actions/setup-go@v2
       with:
         go-version: '1.16'
 
     - name: Test
+      working-directory: argocd-playground
       run: |
         make test
 
     - name: Build docker image
+      working-directory: argocd-playground
       run: |
         make build-docker
       env:
@@ -35,7 +39,41 @@ jobs:
         logout: true
 
     - name: Push to Github Container Registry
+      working-directory: argocd-playground
       run: |
         make push-docker
       env:
         TAG: ${GITHUB_SHA}
+
+  staging-manifest:
+    name: Update staging manifest
+    needs: commit
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Check out manifest repo
+        uses: actions/checkout@v2
+        with:
+          repository: hpcsc/argocd-playground-manifest
+          path: argocd-playground-manifest
+          token: ${{ secrets.MANIFEST_REPO_TOKEN }}
+
+      - uses: imranismail/setup-kustomize@v1
+        with:
+          github-token: ${{ secrets.MANIFEST_REPO_TOKEN }}
+
+      - name: Update image tag
+        working-directory: argocd-playground-manifest
+        run: |
+          make set-image-tag
+        env:
+          TAG: ${GITHUB_SHA}
+
+      - name: Commit and push
+        uses: EndBug/add-and-commit@v7
+        with:
+          author_name: argocd-playground-ci
+          author_email: argocd-playground-ci@example.com
+          cwd: argocd-playground-manifest
+          message: Update image tag to ${{ github.sha }}
+          pull: NO-PULL
+          push: true
