--- a/bootstrap/argocd/overlays/minikube/kustomization.yaml
+++ b/bootstrap/argocd/overlays/minikube/kustomization.yaml
@@ -12,3 +12,7 @@ patches:
       version: v1
       kind: Service
       name: argocd-server
+
+patchesStrategicMerge:
+  - argocd-cm-patch.yaml
+  - argocd-rbac-cm-patch.yaml
