--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -9,41 +9,41 @@ jobs:
     name: Commit
     runs-on: ubuntu-20.04
     steps:
-    - name: Check out
-      uses: actions/checkout@v2
-      with:
-        path: argocd-playground
+      - name: Check out
+        uses: actions/checkout@v2
+        with:
+          path: argocd-playground
 
-    - uses: actions/setup-go@v2
-      with:
-        go-version: '1.16'
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '1.16'
 
-    - name: Test
-      working-directory: argocd-playground
-      run: |
-        make test
+      - name: Test
+        working-directory: argocd-playground
+        run: |
+          make test
 
-    - name: Build docker image
-      working-directory: argocd-playground
-      run: |
-        make build-docker
-      env:
-        TAG: ${GITHUB_SHA}
+      - name: Build docker image
+        working-directory: argocd-playground
+        run: |
+          make build-docker
+        env:
+          TAG: ${GITHUB_SHA}
 
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v1
-      with:
-        registry: ghcr.io
-        username: hpcsc
-        password: ${{ secrets.GITHUB_TOKEN }}
-        logout: true
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: hpcsc
+          password: ${{ secrets.GITHUB_TOKEN }}
+          logout: true
 
-    - name: Push to Github Container Registry
-      working-directory: argocd-playground
-      run: |
-        make push-docker
-      env:
-        TAG: ${GITHUB_SHA}
+      - name: Push to Github Container Registry
+        working-directory: argocd-playground
+        run: |
+          make push-docker
+        env:
+          TAG: ${GITHUB_SHA}
 
   staging-manifest:
     name: Update staging manifest
@@ -77,3 +77,31 @@ jobs:
           message: Update image tag to ${{ github.sha }}
           pull: NO-PULL
           push: true
+
+  deploy-staging:
+    name: Deploy to staging
+    needs: staging-manifest
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Check out
+        uses: actions/checkout@v2
+        if: ${{ env.ACT == 'true' }}
+        with:
+          path: argocd-playground
+
+      - uses: clowdhaus/argo-cd-action/@main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          version: 2.1.2
+          command: version
+          options: --client
+
+      - name: Sync ArgoCD staging application
+        working-directory: argocd-playground
+        if: ${{ env.ACT == 'true' }}
+        run: |
+          make sync-staging
+        env:
+          ARGOCD_TOKEN: ${{ secrets.ARGOCD_TOKEN }}
+          ARGOCD_SERVER_URL: ${{ secrets.ARGOCD_SERVER_URL }}
