Update commit in version.json

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -23,6 +23,13 @@ jobs:
         run: |
           make test
 
+      - name: Update version.json
+        working-directory: argocd-playground
+        run: |
+          make update-commit
+        env:
+          COMMIT: ${GITHUB_SHA}
+
       - name: Build docker image
         working-directory: argocd-playground
         run: |
