--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,4 @@ MANIFEST_REPO_TOKEN=placeholder
 ARGOCD_TOKEN=placeholder
 ARGOCD_SERVER_URL=url-to-argocd-server-in-local-cluster
 STAGING_SERVER_URL=url-to-staging-application
+BASE64_KUBE_CONFIG=result-of-command-"kubectl config view --minify --flatten | base64 | tr -d '\n'"
