Add stage to deploy to prod

--- a/.env.template
+++ b/.env.template
@@ -3,4 +3,5 @@ MANIFEST_REPO_TOKEN=placeholder
 ARGOCD_TOKEN=placeholder
 ARGOCD_SERVER_URL=url-to-argocd-server-in-local-cluster
 STAGING_SERVER_URL=url-to-staging-application
+PROD_SERVER_URL=url-to-prod-application
 BASE64_KUBE_CONFIG=result-of-command-"kubectl config view --minify --flatten | base64 | tr -d '\n'"
