Allow ArgoCD to create namespace

--- a/argocd/manifest/appproject.yaml
+++ b/argocd/manifest/appproject.yaml
@@ -25,3 +25,6 @@ spec:
     kind: LimitRange
   - group: ''
     kind: NetworkPolicy
+  clusterResourceWhitelist:
+  - group: ''
+    kind: Namespace
