--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -64,9 +64,10 @@ jobs:
           path: argocd-playground-manifest
           token: ${{ secrets.MANIFEST_REPO_TOKEN }}
 
-      - uses: imranismail/setup-kustomize@v1
+      - name: Setup kustomize using asdf
+        uses: asdf-vm/actions/install@v1
         with:
-          github-token: ${{ secrets.MANIFEST_REPO_TOKEN }}
+          tool_versions: kustomize 4.4.1
 
       - name: Update image tag
         working-directory: argocd-playground-manifest
@@ -96,15 +97,11 @@ jobs:
         with:
           path: argocd-playground
 
-      - name: Setup argocd CLI
-        uses: clowdhaus/argo-cd-action/@main
+      - name: Setup ArgoCD CLI using asdf
+        uses: asdf-vm/actions/install@v1
         if: ${{ env.ACT == 'true' }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          version: 2.1.2
-          command: version
-          options: --client
+          tool_versions: argocd 2.1.7
 
       - name: Sync ArgoCD staging application
         working-directory: argocd-playground
@@ -136,15 +133,11 @@ jobs:
         with:
           path: argocd-playground
 
-      - name: Setup argocd CLI
-        uses: clowdhaus/argo-cd-action/@main
+      - name: Setup ArgoCD CLI using asdf
+        uses: asdf-vm/actions/install@v1
         if: ${{ env.ACT == 'true' }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          version: 2.1.2
-          command: version
-          options: --client
+          tool_versions: argocd 2.1.7
 
       - name: Sync ArgoCD prod application
         working-directory: argocd-playground
